--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -11,6 +11,13 @@
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
+    <!-- Toastr alerts -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    <!--Fontawesome-->
+    <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script> 
+    <script src="https://kit.fontawesome.com/8b7dd2a781.js" crossorigin="anonymous"></script>
+
     <!--Our own css-->
     <link rel="stylesheet" href="{% static 'main.css' %}">
     
@@ -24,6 +31,11 @@
         <li><a {% if 'account' in request.path %}class="active"{% endif %} href="{% url 'users:account' %}">User Account ({{request.user.username}})</a></li>
         <li><a {% if 'info' in request.path %}class="active"{% endif %}  href="{% url 'users:user-info' %}">User Info</a></li>
         <li><a href="{% url 'users:sign-out' %}">Sign Out</a></li>
+        {% if 'ecommerce' in installed_apps %}
+        <li><a {% if 'item' in request.path %}class="active"{% endif %}  href="{% url 'ecommerce:items' %}">Shop Items</a></li>
+        <li><a {% if 'cart' in request.path %}class="active"{% endif %}  href="{% url 'ecommerce:cart' %}">Cart</a></li>
+        <li><a {% if 'order' in request.path %}class="active"{% endif %}  href="{% url 'ecommerce:orders' %}">Orders</a></li>
+        {% endif %}
     </ul>
     {% else %}
     <ul class="sidenav">
@@ -38,8 +50,16 @@
 
     <!--visit https://code.jquery.com/ for jquery script-->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <!-- Toastr -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!--Our own j2-->
+    <script src="{% static 'alert.js' %}"></script>
+    <script src="{% static 'main.js' %}"></script>
 
     {% block extend_foot %}<!-- This allows us to extend the foot scripts in HTML docs that have special requirements-->{% endblock %}
 
