--- a/templates/ecommerce/item_button.html
+++ b/templates/ecommerce/item_button.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-{% comment %} this adds a plus to allow users to add items to cart!! {% endcomment %}
+{% comment %} this adds an icon that, when clicked, allows users to add items to cart!! {% endcomment %}
 <a class="item btn btn-success" model="{{ target_model }}" id="target_{{ object_id }}" action="add">
 	<i class="item-{{object_id}} fa-solid fa-cart-plus"></i>
 	<span class="item-count-{{ object_id }}"></span>
