--- a/templates/ecommerce/item_button_v2.html
+++ b/templates/ecommerce/item_button_v2.html
@@ -1,4 +1,4 @@
 {% load static %}
 
-{% comment %} this adds a plus to allow users to remove items from cart!! {% endcomment %}
+{% comment %} this adds an icon that, when clicked, allows users to remove items from cart!! {% endcomment %}
 <a style="color:red;" class="item" model="{{ target_model }}" id="target_{{ object_id }}" action="remove"><i class="item-{{object_id}} fa-solid fa-close"></i></a>
